--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: The Minimum Viable Model
-description: 'Artificial Intelligence trends and concepts made easy.' # this means to ignore newlines until "baseurl:"
+title: BEYOND THE RECORD
+description: 'Locality, spatiality, media and journalism...  Studying trends and concepts for made easy.' # this means to ignore newlines until "baseurl:"
 permalink: ':title:output_ext'
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://the-mvm.github.io" # the base hostname & protocol for your site, e.g. http://example.com
@@ -24,14 +24,13 @@ logo-dark: "/assets/img/branding/MVM-logo-full-dark.svg"
 highlight_theme: syntax-base16.monokai.dark # select a dark theme for the code highlighter if needed
 
 # Author settings
-author: Armando Maynez # add your name
+author: Cheon Hyeonjin # add your name
 author-pic: Myself_Neon_grey.jpg
-about-author: Engineer, industry executive, research enthusiast. Avid learner with diverse interests in coding, machine learning, artificial intelligence and reinforcement learning. 17+ years of experience working in multinational corporations.
-
+about-author: Ph. D. in Mass Communication, Adjunct professor at Konkuk University, Researcher(research explorer & enthusiast). Avid learner with diverse interests in Media, Journalism, machine learning, artificial intelligence and reinforcement learning. 15+ years of experience working in media & Journalism.
 # Contact links
-email: armando.maynez@gmail.com # Add your Email address
+email: hyeonjinc@gmail.com # Add your Email address
 phone: # Add your Phone number
-website: https://amaynez.github.io # Add your website
+website: https://hyeonjincheon.github.io # Add your website
 linkedin: amaynez # Add your Linkedin handle
 github: amaynez # Add your Github handle
 twitter: '@MvmThe' # Add your Twitter handle
